Convert player talents to a datapack registry
Swap talent node display from ResourceKeys to proper Holders

Avoid another runtime reg lookup