@@ -1,98 +1,34 @@
 package com.chaosbuffalo.mkcore.core.talents;
 
-import com.chaosbuffalo.mkcore.MKCore;
-import com.chaosbuffalo.mkcore.network.PacketHandler;
-import com.chaosbuffalo.mkcore.network.TalentDefinitionSyncPacket;
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.mojang.serialization.Dynamic;
-import com.mojang.serialization.JsonOps;
+import com.chaosbuffalo.mkcore.MKCoreRegistry;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.packs.resources.ResourceManager;
-import net.minecraft.server.packs.resources.SimpleJsonResourceReloadListener;
-import net.minecraft.util.profiling.ProfilerFiller;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.neoforge.common.NeoForge;
-import net.neoforged.neoforge.event.OnDatapackSyncEvent;
 
-import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-public class TalentManager extends SimpleJsonResourceReloadListener {
-    public static final String DEFINITION_FOLDER = "player_talents";
+public class TalentManager {
+    private static Collection<ResourceKey<TalentTreeDefinition>> defaultTrees;
 
-    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().create();
-    public static final ResourceLocation INVALID_TREE = MKCore.id("tree.invalid");
-    private final Map<ResourceLocation, TalentTreeDefinition> talentTreeMap = new HashMap<>();
-    private Collection<TalentTreeDefinition> defaultTrees;
-
-    public TalentManager() {
-        super(GSON, DEFINITION_FOLDER);
-        this.defaultTrees = null;
-        NeoForge.EVENT_BUS.register(this);
+    @Nullable
+    public static TalentTreeDefinition getTalentTree(RegistryAccess registryAccess, ResourceLocation treeId) {
+        return getTalentTree(registryAccess, ResourceKey.create(MKCoreRegistry.TALENT_TREE_REGISTRY_KEY, treeId));
     }
 
-    @Override
-    protected void apply(@Nonnull Map<ResourceLocation, JsonElement> objectIn,
-                         @Nonnull ResourceManager resourceManagerIn,
-                         @Nonnull ProfilerFiller profilerIn) {
-
-        MKCore.LOGGER.info("Loading Talent definitions from json");
-        for (Map.Entry<ResourceLocation, JsonElement> entry : objectIn.entrySet()) {
-            parse(entry.getKey(), entry.getValue().getAsJsonObject());
-        }
-        defaultTrees = null;
+    @Nullable
+    public static TalentTreeDefinition getTalentTree(RegistryAccess registryAccess, ResourceKey<TalentTreeDefinition> treeId) {
+        return registryAccess.registryOrThrow(MKCoreRegistry.TALENT_TREE_REGISTRY_KEY).get(treeId);
     }
 
-    private boolean parse(ResourceLocation loc, JsonObject json) {
-        MKCore.LOGGER.debug("Parsing Talent Tree Json for {}", loc);
-        ResourceLocation treeId = ResourceLocation.fromNamespaceAndPath(loc.getNamespace(), "talent_tree." + loc.getPath());
-
-        TalentTreeDefinition talentTree = TalentTreeDefinition.deserialize(treeId, new Dynamic<>(JsonOps.INSTANCE, json));
-
-        registerTalentTree(talentTree);
-        return true;
-    }
-
-    public TalentTreeDefinition getTalentTree(ResourceLocation treeId) {
-        return talentTreeMap.get(treeId);
-    }
-
-    public Collection<TalentTreeDefinition> getDefaultTrees() {
+    public static Collection<ResourceKey<TalentTreeDefinition>> getDefaultTrees(RegistryAccess registryAccess) {
         if (defaultTrees == null) {
-            defaultTrees = talentTreeMap.values().stream()
-                    .filter(TalentTreeDefinition::isDefault)
-                    .collect(Collectors.toList());
+            defaultTrees = registryAccess.registryOrThrow(MKCoreRegistry.TALENT_TREE_REGISTRY_KEY).entrySet().stream()
+                    .filter(e -> e.getValue().isDefault())
+                    .map(Map.Entry::getKey)
+                    .toList();
         }
         return defaultTrees;
-    }
-
-    public void registerTalentTree(TalentTreeDefinition tree) {
-        talentTreeMap.put(tree.getTreeId(), tree);
-    }
-
-    public Collection<ResourceLocation> getTreeNames() {
-        return Collections.unmodifiableCollection(talentTreeMap.keySet());
-    }
-
-
-    @SubscribeEvent
-    public void onDataPackSync(OnDatapackSyncEvent event) {
-        MKCore.LOGGER.debug("TalentManager.onDataPackSync");
-        TalentDefinitionSyncPacket updatePacket = new TalentDefinitionSyncPacket(talentTreeMap.values());
-        if (event.getPlayer() != null) {
-            // sync to single player
-            MKCore.LOGGER.debug("Sending {} talent definition update packet", event.getPlayer());
-            PacketHandler.sendMessage(updatePacket, event.getPlayer());
-        } else {
-            // sync to playerlist
-            PacketHandler.sendToAll(updatePacket);
-        }
     }
 }
